--- a/index.html
+++ b/index.html
@@ -2,36 +2,218 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Hello Prijedor</title>
+<title>GradPrijedor Android App</title>
+<link rel="stylesheet" href="jquery-mobile/jquery.superbox.css">
 <link href="jquery-mobile/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="jquery-mobile/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
+<script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
+    <script type="text/javascript" src="jquery-mobile/gmap3.js"></script>
+    <link rel="stylesheet" type="text/css" href="menu/gmap3-menu.css" />
+    <script type="text/javascript" src="menu/gmap3-menu.js"></script> 
+
+<script src="jquery-mobile/jquery.superbox.js" type="text/javascript"></script>
+<script type="text/javascript">
+$(function(){
+	$.superbox.settings = {
+	boxId: "superbox", // Id attribute of the "superbox" element
+	boxClasses: "", // Class of the "superbox" element
+	overlayOpacity: .8, // Background opaqueness
+	boxWidth: "460", // Default width of the box
+	boxHeight: "600", // Default height of the box
+	loadTxt: "Učitavam...", // Loading text
+	closeTxt: "Zatvori ...", // "Close" button text
+	prevTxt: "Previous", // "Previous" button text
+	nextTxt: "Next" // "Next" button text
+};
+	$.superbox();
+});
+</script>
+
+<script type="text/javascript">
+$(function(){
+  $.superbox();
+  $('#lightbox_click').trigger('click');
+  $.superbox.close() 
+});
+</script>
+<a href="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xfa1/v/t1.0-9/10269443_525720107572937_4398032747954400059_n.jpg?oh=ad2f5450bb190884bc99abe10bfa9e9b&oe=54F5FB9C&__gda__=1420718762_68f13a803e6b7df945ee3623372d457d" id="lightbox_click" class="text-links" rel="superbox[iframe]">Zatvori ...</a>
+<script type="text/javascript">
+$overlay.add($wrapper).add($closeBtn).click(function(){
+				hideAll();
+			})	</script>
 </head> 
 <body> 
 
 <div data-role="page" id="page">
-	<div data-role="header">
+  <div data-role="header">
 		<h1>GradPrijedor.info</h1>
-	</div>
+		<table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html"><button data-icon="home" data-iconpos="notext"> Button</button></a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)"><button data-icon="back" data-iconpos="notext">Button</button></a>&nbsp;</th>
+	      </tr>
+    </table>
+  </div>
 	<div data-role="content">	
 		<ul data-role="listview">
-			<li><a href="#page2">Prijedor kamere uživo</a></li>
-            <li><a href="#page3">Novosti</a></li>
-			<li><a href="#page4">Oglasi</a></li>
+  			<li><a href="#page2">Dešavanja u gradu...</a></li>
+            <li><a href="#page3">Novosti - PrijedorDanas.com</a></li>
+			<li><a href="#page4">Prijedor uživo</a></li>
+            <li><a href="mapa.html">Mapa</a></li>
 		</ul>		
-	</div>
+   <center> <img src="foto/10477768_10203955720306804_530838510_o.jpg" width="480" height="270"></center></div>
 	<div data-role="footer">
-		<h4><a href="http://www.elpin.biz" target="_blank"> www.elpin.biz</a></h4>
+		<h4>www.gradprijedor.info</h4>
 	</div>
 </div>
 
 <div data-role="page" id="page2">
-<div data-role="header">
-		<h1> Prijedor kamere</h1>
+	<div data-role="header">
+		<h1>Dešavanja u gradu...</h1>
+		<table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html">
+		      <button data-icon="home" data-iconpos="notext"> Button</button>
+		      </a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)">
+		      <button data-icon="back" data-iconpos="notext">Button</button>
+		      </a>&nbsp;</th>
+	      </tr>
+	  </table>
 	</div>
-   <body>
-<script language="JavaScript" type="text/javascript">
+	<div data-role="content">	
+		<ul data-role="listview">
+			<li><a href="#kultura">Kultura</a></li>
+            <li><a href="#sport">Sport</a></li>
+			<li>Party</li>
+		</ul>		
+	</div>
+	<div data-role="footer">
+		<h4>www.gradprijedor.info</h4>
+	</div>
+</div>
+
+<div data-role="page" id="kultura">
+	<div data-role="header">
+		<h1>Kultura</h1>
+		<table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html">
+		      <button data-icon="home" data-iconpos="notext"> Button</button>
+		      </a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)">
+		      <button data-icon="back" data-iconpos="notext">Button</button>
+		      </a>&nbsp;</th>
+	      </tr>
+	  </table>
+	</div>
+	<div data-role="content">	
+		<iframe src="http://www.prijedordanas.com/?cat=6" height="640" width="460" frameBorder="0" scrolling="vertical"seamless> </iframe>		
+	</div>
+	<div data-role="footer">
+		<h4>www.gradprijedor.info</h4>
+	</div>
+</div>
+
+<div data-role="page" id="sport">
+	<div data-role="header">
+		<h1>Sport</h1>
+		<table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html">
+		      <button data-icon="home" data-iconpos="notext"> Button</button>
+		      </a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)">
+		      <button data-icon="back" data-iconpos="notext">Button</button>
+		      </a>&nbsp;</th>
+	      </tr>
+	  </table>
+	</div>
+	<div data-role="content">	
+		<iframe src="http://www.prijedordanas.com/?cat=7" height="640" width="460" frameBorder="0" scrolling="vertical"seamless> </iframe>		
+	</div>
+	<div data-role="footer">
+		<h4>www.gradprijedor.info</h4>
+	</div>
+</div>
+
+<div data-role="page" id="page4">
+	<div data-role="header">
+		<h1>Party</h1>
+	  <table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html">
+		      <button data-icon="home" data-iconpos="notext"> Button</button>
+		      </a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)">
+		      <button data-icon="back" data-iconpos="notext">Button</button>
+		      </a>&nbsp;</th>
+	      </tr>
+	  </table>
+	</div>
+	<div data-role="content">	
+		Content		
+	</div>
+	<div data-role="footer">
+		<h4>www.gradprijedor.info</h4>
+	</div>
+</div>
+
+
+<div data-role="page" id="page3">
+	<div data-role="header">
+		<h1>Novosti - PrijedorDanas.com</h1>
+		<table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html">
+		      <button data-icon="home" data-iconpos="notext"> Button</button>
+		      </a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)">
+		      <button data-icon="back" data-iconpos="notext">Button</button>
+		      </a>&nbsp;</th>
+	      </tr>
+	  </table>
+  </div>
+	<div data-role="content">	
+		<iframe src="http://www.prijedordanas.com/?cat=5" height="640" width="460" frameBorder="0" scrolling="vertical"seamless> </iframe>	
+	</div>
+	<div data-role="footer">
+		<h4>www.gradprijedor.info</h4>
+	</div>
+</div>
+
+<div data-role="page" id="page4">
+	<div data-role="header">
+		<h1>Prijedor uživo</h1>
+		<table width="100%" border="0">
+		  <tr>
+		    <th scope="col"><a href="index.html">
+		      <button data-icon="home" data-iconpos="notext"> Button</button>
+		      </a>&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col">&nbsp;</th>
+		    <th scope="col"><a href="javascript:history.go(-1)">
+		      <button data-icon="back" data-iconpos="notext">Button</button>
+		      </a>&nbsp;</th>
+	      </tr>
+	  </table>
+	</div>
+	<div data-role="content">	
+<center><script language="JavaScript" type="text/javascript">
    function reload() {setTimeout('reloadImg("refresh")',500)};    // 1000 = 1 second. I'd suggest a reasonable minumum of 350
    function reloadImg(id)
    {
@@ -40,42 +222,13 @@
     obj.src = "http://izlog.dyndns.org:90/snapshot.cgi?user=guest&pwd=guest&t="+rand;
    }
  </script>
-<center>
-  <p><img src="http://izlog.dyndns.org:90/snapshot.cgi?user=guest&pwd=guest&t=" name="refresh" id="refresh" onload='reload()'>
-  </p>
-  <p>Prijedor - Glavni trg </p>
-</center>
-</body>
-	<div data-role="content">	
-		
-	</div>
-	<div data-role="footer">
-		<h4>Omogućio ELPIN Prijedor</h4>
-	</div>
-</div>
-
-<div data-role="page" id="page3">
-	<div data-role="header">
-		<h1>Novosti</h1>
-	</div>
-    <iframe src="http://www.prijedor.rs.ba/feed.html" height="640" width="640" frameBorder="0" scrolling="auto"seamless </iframe>
-
-	<div data-role="footer">
-		<h4>Omogućio portal www.prijedordanas.com</h4>
-	</div>
-</div>
-
-<div data-role="page" id="page4">
-	<div data-role="header">
-		<h1>Oglasi</h1>
-	</div>
-	<div data-role="content">	
-		U izradi ...		
+<img src="http://izlog.dyndns.org:90/snapshot.cgi?user=guest&pwd=guest&t=" name="refresh" id="refresh" onload='reload()'>
+</center>	
 	</div>
 	<div data-role="footer">
 		<h4>www.gradprijedor.info</h4>
 	</div>
-</div>
+
 
 </body>
 </html>
